OBG 373 navbar with button

--- a/fintech-examples/fintech-ui/src/app/common/navbar/navbar.component.html
+++ b/fintech-examples/fintech-ui/src/app/common/navbar/navbar.component.html
@@ -1,26 +1,11 @@
 <nav class="navbar navbar-light py-3" *ngIf="isLoggedIn()">
   <a class="navbar-brand text-primary mr-4" routerLink="/">
-    <img class="logo" />
     <span class="ml-3">FintechUI</span>
   </a>
-  <ul class="nav">
-    <li class="dropdown ml-auto">
-      <a
-        class="nav-item dropdown-toggle mr-3 no-underline clickable"
-        id="dropdownMenuButton"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-        >{{ getUserName() }}
-      </a>
-      <div class="dropdown-menu dropdown-menu-right">
-        <a (click)="onLogout()" [routerLinkActive]="['active']" class="dropdown-item clickable pb-2">
-          <div>
-            <img src="" />
-            <span class="nav__title"> Sign out</span>
-          </div>
-        </a>
-      </div>
-    </li>
-  </ul>
+  <a class="navbar-brand text-primary mr-4" routerLink="/">
+    <a class="ml-3">{{ getUserName() }}&nbsp;</a>
+    <button class="btn btn-primary" (click)="onLogout()" [routerLinkActive]="['active']">
+      Sign out
+    </button>
+  </a>
 </nav>
