fix scaMethod call

--- a/consent-ui/src/app/ais/sca-select-page/sca-select-page.component.html
+++ b/consent-ui/src/app/ais/sca-select-page/sca-select-page.component.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <label for="scaMethod">Example select</label>
         <select class="form-control" id="scaMethod" formControlName="selectedMethodValue">
-            <option *ngFor="let scaMethod of scaMethods">{{scaMethod.methodValue}}</option>
+            <option *ngFor="let scaMethod of scaMethods" [value]="scaMethod.id">{{scaMethod.methodValue}}</option>
         </select>
     </div>
 
