--- a/consent-ui/src/app/ais/entry-page/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
+++ b/consent-ui/src/app/ais/entry-page/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
@@ -27,8 +27,8 @@
       </div>
     </ng-container>
     <div class="form-group d-flex flex-row justify-content-lg-between">
-      <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
-      <button type="button" class="btn md-6 w-100 btn-primary" (click)="onConfirm()">Confirm</button>
+      <button  id="do_cancel" class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
+      <button  id="do_submit" type="button" class="btn md-6 w-100 btn-primary" (click)="onConfirm()">Confirm</button>
     </div>
   </div>
 </div>
