--- a/consent-ui/src/app/ais/entry-page/initiation/common/initial-consent/consent-account-access-selection.component.html
+++ b/consent-ui/src/app/ais/entry-page/initiation/common/initial-consent/consent-account-access-selection.component.html
@@ -23,10 +23,10 @@
           </div>
         </div>
       </ng-container>
-      
+
       <div class="form-group d-flex flex-row justify-content-lg-between">
-        <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
-        <button type="button" class="btn md-6 w-100 btn-primary" [disabled]="accountAccessForm.invalid" (click)="onConfirm()">{{submitButtonMessage()}}</button>
+        <button id="do_cancel" class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
+        <button id="do_submit" type="button" class="btn md-6 w-100 btn-primary" [disabled]="accountAccessForm.invalid" (click)="onConfirm()">{{submitButtonMessage()}}</button>
       </div>
     </div>
   </div>
