--- a/consent-ui/src/app/ais/result-page/result-page.component.html
+++ b/consent-ui/src/app/ais/result-page/result-page.component.html
@@ -4,8 +4,8 @@
     <p class="text-secondary mb-5 text-left">You are going to be redirected back to <strong>{{finTechName}}</strong></p>
 
     <div class="form-group d-flex flex-row justify-content-lg-between">
-      <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
-      <button type="button" class="btn md-6 w-100 btn-primary" (click)="onConfirm()">Back to {{finTechName}}</button>
+      <button id="do_cancel" class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
+      <button id="do_submit" type="button" class="btn md-6 w-100 btn-primary" (click)="onConfirm()">Back to {{finTechName}}</button>
     </div>
   </div>
 </div>
