OBG-428. Added smoke tests with embedded all accounts and consent UI

--- a/consent-ui/src/app/ais/sca-result-page/sca-result-page.component.html
+++ b/consent-ui/src/app/ais/sca-result-page/sca-result-page.component.html
@@ -26,7 +26,7 @@
     <div class="card-footer no-bg-color">
       <div class="row my-3">
         <div class="col">
-          <button type="submit" class="btn btn-primary btn-block" [disabled]="reportScaResultForm.invalid">Confirm</button>
+          <button id="do_submit" type="submit" class="btn btn-primary btn-block" [disabled]="reportScaResultForm.invalid">Confirm</button>
         </div>
       </div>
     </div>
