OBG-428. Add dedicated access smoke tests

--- a/consent-ui/src/app/ais/entry-page/initiation/common/dedicated-access/dedicated-access.component.html
+++ b/consent-ui/src/app/ais/entry-page/initiation/common/dedicated-access/dedicated-access.component.html
@@ -8,8 +8,8 @@
       <consent-app-account-selector [targetForm]="limitedAccountAccessForm" [accounts]="accounts"></consent-app-account-selector>
 
       <div class="form-group d-flex flex-row justify-content-lg-between">
-        <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
-        <button type="button" class="btn md-6 w-100 btn-primary" [disabled]="limitedAccountAccessForm.invalid" (click)="onSelect()">Select</button>
+        <button id="do_cancel" class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
+        <button id="do_submit" type="button" class="btn md-6 w-100 btn-primary" [disabled]="limitedAccountAccessForm.invalid" (click)="onSelect()">Select</button>
       </div>
     </div>
   </div>
