OBG-399 review fixes

--- a/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/components/bank-search/bank-search.component.html
@@ -4,7 +4,7 @@
       <h4 class="card-title">Search your bank</h4>
       <app-search (keyword)="onSearch($event)"></app-search>
       <div class="scrollable">
-        <button (click)="onBankSelect(bank.uuid)" *ngFor="let bank of searchedBanks" class="bank-list" type="button">
+        <button (click)="onBankSelect(bank)" *ngFor="let bank of searchedBanks" class="bank-list" type="button">
           {{ bank.bankName }}
         </button>
       </div>
