Force controls to be disabled if key data is not loaded

--- a/consent-ui/src/app/ais/sca-select-page/sca-select-page.component.html
+++ b/consent-ui/src/app/ais/sca-select-page/sca-select-page.component.html
@@ -6,5 +6,5 @@
     </select>
   </div>
 
-  <button id="do_submit" class="btn btn-primary w-100" type="submit">Submit</button>
+  <button id="do_submit" class="btn btn-primary w-100" type="submit" [disabled]="!selectedMethod.value">Submit</button>
 </form>
