--- a/consent-ui/src/app/ais/to-aspsp-page/to-aspsp-redirection.component.html
+++ b/consent-ui/src/app/ais/to-aspsp-page/to-aspsp-redirection.component.html
@@ -5,7 +5,7 @@
 
     <div class="form-group d-flex flex-row justify-content-lg-between">
       <button id="do_cancel" class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
-      <button id="do_submit" type="button" class="btn md-6 w-100 btn-primary" (click)="onConfirm()">Confirm</button>
+      <button id="do_submit" type="button" class="btn md-6 w-100 btn-primary" [disabled]="!redirectTo" (click)="onConfirm()">Confirm</button>
     </div>
   </div>
 </div>
