OBG-475. Updated API and shared code with redirect

--- a/fintech-examples/fintech-ui/src/app/redirect-after-consent/redirect-after-consent.component.html
+++ b/fintech-examples/fintech-ui/src/app/redirect-after-consent/redirect-after-consent.component.html
@@ -1,5 +1,6 @@
 <div class="card card-frame">
   <div class="card-body">
-    <h4 class="card-title">Redirect after Consent</h4>
+    <h4 class="card-title">Consent has been granted</h4>
+    <p class="card-text text-center">Please wait while we load data</p>
   </div>
 </div>
