--- a/consent-ui/src/app/ais/sca-result-page/sca-result-page.component.html
+++ b/consent-ui/src/app/ais/sca-result-page/sca-result-page.component.html
@@ -20,6 +20,9 @@
              *ngIf="reportScaResultForm.controls['tan'].touched && reportScaResultForm.controls['tan'].hasError('required')">
           TAN is required
         </div>
+        <div class="invalid-feedback d-block" *ngIf="wrongSca">
+          SCA challenge is incorrect
+        </div>
       </div>
     </div>
 
