--- a/fintech-examples/fintech-ui/src/app/login/login.component.html
+++ b/fintech-examples/fintech-ui/src/app/login/login.component.html
@@ -13,7 +13,10 @@
             id="username"
             type="text"
           />
-          <div *ngIf="username?.errors?.required && (username?.dirty || loginFormDir.submitted)" class="invalid-feedback d-block">
+          <div
+            *ngIf="username?.errors?.required && (username?.dirty || loginFormDir.submitted)"
+            class="invalid-feedback d-block"
+          >
             Username is Required
           </div>
           <div *ngIf="username?.errors?.pattern && username?.dirty" class="invalid-feedback">
@@ -31,7 +34,10 @@
             id="password"
             type="password"
           />
-          <div *ngIf="password?.errors?.required && (password?.dirty || loginFormDir.submitted)" class="invalid-feedback d-block">
+          <div
+            *ngIf="password?.errors?.required && (password?.dirty || loginFormDir.submitted)"
+            class="invalid-feedback d-block"
+          >
             Password is Required
           </div>
           <div *ngIf="password?.errors?.pattern && password?.dirty" class="invalid-feedback">
@@ -39,7 +45,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary btn-center btn-block mb-3" type="submit">Login</button>
+      <button class="btn btn-primary btn-center btn-block" type="submit">Login</button>
     </div>
   </div>
 </form>
