--- a/fintech-examples/fintech-ui/src/app/bank/payment/confirm/confirm.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank/payment/confirm/confirm.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center mt-5">
     <img alt="redirection" class="card-img" src="assets/icons/icons8-network 2.png" />
   </div>
-  <br>
+  <br />
   <h2 class="card-title  justify-content-center">Please confirm redirection to consent ui</h2>
   <p class="text-secondary">When you confirm, you will be redirected to consent ui to authorize payment.</p>
 
@@ -12,7 +12,7 @@
         <img alt="redirection" class="card-img mb-4 mb-md-0 mr-4" src="assets/icons/card_payment.png" />
         <div class="">
           <label class="text-bold title">My account</label>
-          <p class="description">{{confirmData.paymentRequest.debitorIban}}</p>
+          <p class="description">{{ confirmData.paymentRequest.debitorIban }}</p>
         </div>
       </div>
     </div>
@@ -21,28 +21,26 @@
         <img alt="redirection" class="card-img mb-4 mb-md-0 mr-4" src="assets/icons/receive_dollar.png" />
         <div class="">
           <label class="text-bold title">IBAN</label>
-          <p class="description">{{confirmData.paymentRequest.creditorIban}}</p>
+          <p class="description">{{ confirmData.paymentRequest.creditorIban }}</p>
         </div>
       </div>
     </div>
   </div>
   <div class="form-group col-md-12">
     <label>Name</label>
-    <p class="text-bold">{{confirmData.paymentRequest.name}}</p>
+    <p class="text-bold">{{ confirmData.paymentRequest.name }}</p>
   </div>
   <div class="form-group col-md-12">
     <label>Purpose of payment</label>
-    <p class="text-bold">{{confirmData.paymentRequest.purpose}}</p>
+    <p class="text-bold">{{ confirmData.paymentRequest.purpose }}</p>
   </div>
   <div class="form-group col-md-12 text-md-right">
     <label>Amount</label>
-    <p class="text-bold">{{confirmData.paymentRequest.amount}} EUR</p>
+    <p class="text-bold">{{ format(confirmData.paymentRequest.amount) }} EUR</p>
   </div>
 </section>
 
 <div class="d-sm-flex">
   <button (click)="onDeny()" class="btn btn-outline-secondary w-100 mr-4" id="do_deny">Cancel</button>
-  <button (click)="onConfirm()" class="btn btn-primary w-100" id="do_submit" type="button">
-    Ok
-  </button>
+  <button (click)="onConfirm()" class="btn btn-primary w-100" id="do_submit" type="button">Ok</button>
 </div>
